--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>hystrix</module>
         <module>nativeConfigServer</module>
         <module>nativeConfigClient</module>
+        <module>configServer</module>
+        <module>configClient</module>
     </modules>
 
     <parent>
